test/files/neg/t2870.check
t2870.scala:1: error: not found: type Jar (similar: Jars)
class Jars(jar: Jar)
                ^
t2870.scala:6: error: illegal cyclic reference involving value <import>
  val scala = fromClasspathString(javaClassPath) 
                                  ^
t2870.scala:4: error: stable identifier required, but scala.util.Properties found.
  import scala.util.Properties.javaClassPath
                    ^
three errors found
